
SVN
-------------------------------

XML:   Resolved issue CASTOR-1653 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed type conversion error when unmarshalling enum fields.
       Details: http://jira.codehaus.org/browse/CASTOR-1653
       (Ralf - 20061028)

XML:   Resolved issue CASTOR-1667 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Switched org.exolab.castor.builder.package to use Jakarta's commons-logging for logging.
       Details: http://jira.codehaus.org/browse/CASTOR-1667
       (Werner - 20061028)

XML:   Resolved issue CASTOR-1642 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Switched Marshaller to use Jakarta's commons-logging for logging (adding additional
       logging statements of level warn for exceptions that so far got caught silently).
       Details: http://jira.codehaus.org/browse/CASTOR-1642
       (Werner - 20061027)

XML:   Resolved issue CASTOR-1660 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with namespace support for collections created using "container=false".
       Details: http://jira.codehaus.org/browse/CASTOR-1660
       (Werner - 20061027)

XML:   Resolved issue CASTOR-1656 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed broken code as generatd for XMLFieldHandler.resetValues() for Java 2 collections.
       Details: http://jira.codehaus.org/browse/CASTOR-1656
       (Werner - 20061025)

XML:   Resolved issue CASTOR-1646 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cyclic inheritence trees can cause srcgen to loop infinitely
       Details: http://jira.codehaus.org/browse/CASTOR-1646
       (Edward - 20061024)

XML:   Resolved issue CASTOR-1658 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Clean up compilation complaint -- Java 5 varargs complaint
       Details: http://jira.codehaus.org/browse/CASTOR-1658